[tool.poetry]
name = "sosa-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
jinja2 = "^3.1.6"
uvicorn = "^0.34.2"
pydantic = "^2.11.4"
webauthn = "^2.5.2"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
